--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,14 +112,14 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
-    - name: Copy docker-compose.yml and nginx.conf via ssh
+    - name: Copy docker-compose.yml
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "infra/docker-compose.yml,infra/nginx.conf"
+        source: "infra/docker-compose.yml"
         target: "foodgram/infra"
     - name: Executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
