--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,10 +59,27 @@ jobs:
           context: ./backend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest 
+          
+  frontend_tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up nodeJS
+      uses: actions/setup-node@v3
+      with:
+        node-version: 21.7.1
+
+    - name: Install dependencies
+      run:  npm ci
+
+    - name: Test frontend
+      run:  npm run test
 
   docker_push_frontend:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
+    needs: frontend_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
