--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,10 @@ jobs:
   frontend_tests:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: frontend
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up nodeJS
