--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,6 +121,7 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         source: "infra/docker-compose.production.yml"
         target: "foodgram/"
+        tar_tmp_path: /tmp
     - name: Executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
