--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,7 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "infra/docker-compose.production.yml"
+        source: "foodgram/infra/docker-compose.production.yml"
         target: "foodgram/"
         tar_tmp_path: /tmp
     - name: Executing remote ssh commands to deploy
