--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,9 +119,9 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "infra/docker-compose.production.yml"
-        target: "foodgram/"
-        tar_tmp_path: /tmp
+        source: "docker-compose.production.yml"
+        target: "foodgram"
+        debug: true
     - name: Executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
