--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,16 +112,11 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
-    - name: Copy docker-compose.production.yml
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "infra/docker-compose.production.yml"
-        target: "foodgram"
-        debug: true
+    - name: Copy docker-compose.production.yml manually
+      run: |
+        scp -i ./deploy_key infra/docker-compose.production.yml {{ secrets.USER }}@${{ secrets.HOST }}:/home/yc-user/foodgram/docker-compose.production.yml
+      env:
+        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
     - name: Executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
