--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -17,6 +17,8 @@ services:
   backend:
     container_name: backend
     image: gurych/foodgram_backend
+    ports:
+      - "8080:8000"
     env_file: .env
     volumes:
       - backend_static:/app/backend_static
